[tool.poetry]
name = "rnaget-client"
version = "0.1.0"
description = "A python client to query the RNAget compliant servers"
authors = ["Emilio <righiemilio@gmail.com>"]
readme = "README.md"
packages = [{include = "rnaget_client"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
